// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <InstanceList /> without throwing 1`] = `
.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c3 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c5 {
  padding-top: 0.25rem;
}

.c16 {
  padding: 0rem;
}

.c12 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c18 {
  width: 100%;
}

.c18 tr:first-child td {
  border-top: none;
}

.c4 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 2rem;
  display: table-cell;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c4:not(:first-child) {
  border-left-width: 0;
}

.c4:not(:last-child) {
  border-right-width: 0;
}

.c11 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  color: rgba(73,73,73,1);
  font-weight: bold;
}

.c11:not(:first-child) {
  border-left-width: 0;
}

.c11:not(:last-child) {
  border-right-width: 0;
}

.c13 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 9.375rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c13:not(:first-child) {
  border-left-width: 0;
}

.c13:not(:last-child) {
  border-right-width: 0;
}

.c14 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c14:not(:first-child) {
  border-left-width: 0;
}

.c14:not(:last-child) {
  border-right-width: 0;
}

.c15 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c15:not(:first-child) {
  border-left-width: 0;
}

.c15:not(:last-child) {
  border-right-width: 0;
}

.c17 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 3.75rem;
  display: table-cell;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c17:not(:first-child) {
  border-left-width: 0;
}

.c17:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c14 {
    width: 10rem;
    display: table-cell;
  }
}

@media only screen and (min-width:47.9375rem) {
  .c15 {
    width: 8.125rem;
    display: table-cell;
  }
}

<form>
  <table
    className="c0"
  >
    <thead
      className="c1"
      disabled={undefined}
      name="thdead"
      selected={undefined}
    >
      <tr
        className="c2"
        disabled={undefined}
        name="tr"
        selected={undefined}
      >
        <th
          className="c3 c4"
          disabled={undefined}
          name="th"
          selected={undefined}
        >
          <div
            className="c5 baseline-jVaZNU c5 c6"
            role="group"
            style={undefined}
          >
            <li
              className="c7"
            >
              <div
                checked={false}
                className="c8"
                disabled={false}
                id="bh"
                onBlur={undefined}
                onChange={[Function]}
                type="checkbox"
              >
                <input
                  checked={false}
                  className="c9"
                  disabled={false}
                  id="bi"
                  onBlur={undefined}
                  onChange={[Function]}
                  type="checkbox"
                />
                <label
                  className="c10"
                  htmlFor="bi"
                />
              </div>
            </li>
          </div>
        </th>
        <th
          className="c11"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Name 
          </span>
          <svg
            className="c12"
            height="6"
            innerRef={undefined}
            marginBottom="0.125rem"
            marginLeft="0.5625rem"
            style={
              Object {
                "transform": "rotate(180deg)",
              }
            }
            viewBox="0 0 9 6"
            width="9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 1.386L7.648 0 4.5 3.228 1.352 0 0 1.386 4.5 6z"
              fill="rgba(73, 73, 73, 1)"
              fillRule="evenodd"
            />
          </svg>
        </th>
        <th
          className="c13"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Status 
          </span>
        </th>
        <th
          className="c14"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Created 
          </span>
        </th>
        <th
          className="c15"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Short ID 
          </span>
        </th>
        <th
          className="c16 c17"
          disabled={undefined}
          name="th"
          selected={undefined}
        />
      </tr>
    </thead>
    <tbody
      className="c18"
      disabled={undefined}
      name="tbody"
      selected={undefined}
    />
  </table>
</form>
`;

exports[`renders <InstanceList allSelected /> without throwing 1`] = `
.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c3 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c5 {
  padding-top: 0.25rem;
}

.c16 {
  padding: 0rem;
}

.c12 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c18 {
  width: 100%;
}

.c18 tr:first-child td {
  border-top: none;
}

.c4 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 2rem;
  display: table-cell;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c4:not(:first-child) {
  border-left-width: 0;
}

.c4:not(:last-child) {
  border-right-width: 0;
}

.c11 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  color: rgba(73,73,73,1);
  font-weight: bold;
}

.c11:not(:first-child) {
  border-left-width: 0;
}

.c11:not(:last-child) {
  border-right-width: 0;
}

.c13 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 9.375rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c13:not(:first-child) {
  border-left-width: 0;
}

.c13:not(:last-child) {
  border-right-width: 0;
}

.c14 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c14:not(:first-child) {
  border-left-width: 0;
}

.c14:not(:last-child) {
  border-right-width: 0;
}

.c15 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c15:not(:first-child) {
  border-left-width: 0;
}

.c15:not(:last-child) {
  border-right-width: 0;
}

.c17 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 3.75rem;
  display: table-cell;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c17:not(:first-child) {
  border-left-width: 0;
}

.c17:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c14 {
    width: 10rem;
    display: table-cell;
  }
}

@media only screen and (min-width:47.9375rem) {
  .c15 {
    width: 8.125rem;
    display: table-cell;
  }
}

<form>
  <table
    className="c0"
  >
    <thead
      className="c1"
      disabled={undefined}
      name="thdead"
      selected={undefined}
    >
      <tr
        className="c2"
        disabled={undefined}
        name="tr"
        selected={undefined}
      >
        <th
          className="c3 c4"
          disabled={undefined}
          name="th"
          selected={undefined}
        >
          <div
            className="c5 baseline-jVaZNU c5 c6"
            role="group"
            style={undefined}
          >
            <li
              className="c7"
            >
              <div
                checked={true}
                className="c8"
                disabled={false}
                id="bt"
                onBlur={undefined}
                onChange={[Function]}
                type="checkbox"
              >
                <input
                  checked={true}
                  className="c9"
                  disabled={false}
                  id="bu"
                  onBlur={undefined}
                  onChange={[Function]}
                  type="checkbox"
                />
                <label
                  className="c10"
                  htmlFor="bu"
                />
              </div>
            </li>
          </div>
        </th>
        <th
          className="c11"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Name 
          </span>
          <svg
            className="c12"
            height="6"
            innerRef={undefined}
            marginBottom="0.125rem"
            marginLeft="0.5625rem"
            style={
              Object {
                "transform": "rotate(180deg)",
              }
            }
            viewBox="0 0 9 6"
            width="9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 1.386L7.648 0 4.5 3.228 1.352 0 0 1.386 4.5 6z"
              fill="rgba(73, 73, 73, 1)"
              fillRule="evenodd"
            />
          </svg>
        </th>
        <th
          className="c13"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Status 
          </span>
        </th>
        <th
          className="c14"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Created 
          </span>
        </th>
        <th
          className="c15"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Short ID 
          </span>
        </th>
        <th
          className="c16 c17"
          disabled={undefined}
          name="th"
          selected={undefined}
        />
      </tr>
    </thead>
    <tbody
      className="c18"
      disabled={undefined}
      name="tbody"
      selected={undefined}
    />
  </table>
</form>
`;

exports[`renders <InstanceList sortBy /> without throwing 1`] = `
.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c3 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c5 {
  padding-top: 0.25rem;
}

.c16 {
  padding: 0rem;
}

.c13 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c18 {
  width: 100%;
}

.c18 tr:first-child td {
  border-top: none;
}

.c4 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 2rem;
  display: table-cell;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c4:not(:first-child) {
  border-left-width: 0;
}

.c4:not(:last-child) {
  border-right-width: 0;
}

.c14 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c14:not(:first-child) {
  border-left-width: 0;
}

.c14:not(:last-child) {
  border-right-width: 0;
}

.c15 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c15:not(:first-child) {
  border-left-width: 0;
}

.c15:not(:last-child) {
  border-right-width: 0;
}

.c17 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 3.75rem;
  display: table-cell;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c17:not(:first-child) {
  border-left-width: 0;
}

.c17:not(:last-child) {
  border-right-width: 0;
}

.c11 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c11:not(:first-child) {
  border-left-width: 0;
}

.c11:not(:last-child) {
  border-right-width: 0;
}

.c12 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 9.375rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  color: rgba(73,73,73,1);
  font-weight: bold;
}

.c12:not(:first-child) {
  border-left-width: 0;
}

.c12:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c14 {
    width: 10rem;
    display: table-cell;
  }
}

@media only screen and (min-width:47.9375rem) {
  .c15 {
    width: 8.125rem;
    display: table-cell;
  }
}

<form>
  <table
    className="c0"
  >
    <thead
      className="c1"
      disabled={undefined}
      name="thdead"
      selected={undefined}
    >
      <tr
        className="c2"
        disabled={undefined}
        name="tr"
        selected={undefined}
      >
        <th
          className="c3 c4"
          disabled={undefined}
          name="th"
          selected={undefined}
        >
          <div
            className="c5 baseline-jVaZNU c5 c6"
            role="group"
            style={undefined}
          >
            <li
              className="c7"
            >
              <div
                checked={false}
                className="c8"
                disabled={false}
                id="bk"
                onBlur={undefined}
                onChange={[Function]}
                type="checkbox"
              >
                <input
                  checked={false}
                  className="c9"
                  disabled={false}
                  id="bl"
                  onBlur={undefined}
                  onChange={[Function]}
                  type="checkbox"
                />
                <label
                  className="c10"
                  htmlFor="bl"
                />
              </div>
            </li>
          </div>
        </th>
        <th
          className="c11"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Name 
          </span>
        </th>
        <th
          className="c12"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Status 
          </span>
          <svg
            className="c13"
            height="6"
            innerRef={undefined}
            marginBottom="0.125rem"
            marginLeft="0.5625rem"
            style={
              Object {
                "transform": "rotate(180deg)",
              }
            }
            viewBox="0 0 9 6"
            width="9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 1.386L7.648 0 4.5 3.228 1.352 0 0 1.386 4.5 6z"
              fill="rgba(73, 73, 73, 1)"
              fillRule="evenodd"
            />
          </svg>
        </th>
        <th
          className="c14"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Created 
          </span>
        </th>
        <th
          className="c15"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Short ID 
          </span>
        </th>
        <th
          className="c16 c17"
          disabled={undefined}
          name="th"
          selected={undefined}
        />
      </tr>
    </thead>
    <tbody
      className="c18"
      disabled={undefined}
      name="tbody"
      selected={undefined}
    />
  </table>
</form>
`;

exports[`renders <InstanceList sortBy sortOrder /> without throwing 1`] = `
.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c3 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c5 {
  padding-top: 0.25rem;
}

.c16 {
  padding: 0rem;
}

.c13 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c18 {
  width: 100%;
}

.c18 tr:first-child td {
  border-top: none;
}

.c4 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 2rem;
  display: table-cell;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c4:not(:first-child) {
  border-left-width: 0;
}

.c4:not(:last-child) {
  border-right-width: 0;
}

.c14 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c14:not(:first-child) {
  border-left-width: 0;
}

.c14:not(:last-child) {
  border-right-width: 0;
}

.c15 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c15:not(:first-child) {
  border-left-width: 0;
}

.c15:not(:last-child) {
  border-right-width: 0;
}

.c17 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 3.75rem;
  display: table-cell;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c17:not(:first-child) {
  border-left-width: 0;
}

.c17:not(:last-child) {
  border-right-width: 0;
}

.c11 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c11:not(:first-child) {
  border-left-width: 0;
}

.c11:not(:last-child) {
  border-right-width: 0;
}

.c12 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 9.375rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  color: rgba(73,73,73,1);
  font-weight: bold;
}

.c12:not(:first-child) {
  border-left-width: 0;
}

.c12:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c14 {
    width: 10rem;
    display: table-cell;
  }
}

@media only screen and (min-width:47.9375rem) {
  .c15 {
    width: 8.125rem;
    display: table-cell;
  }
}

<form>
  <table
    className="c0"
  >
    <thead
      className="c1"
      disabled={undefined}
      name="thdead"
      selected={undefined}
    >
      <tr
        className="c2"
        disabled={undefined}
        name="tr"
        selected={undefined}
      >
        <th
          className="c3 c4"
          disabled={undefined}
          name="th"
          selected={undefined}
        >
          <div
            className="c5 baseline-jVaZNU c5 c6"
            role="group"
            style={undefined}
          >
            <li
              className="c7"
            >
              <div
                checked={false}
                className="c8"
                disabled={false}
                id="bn"
                onBlur={undefined}
                onChange={[Function]}
                type="checkbox"
              >
                <input
                  checked={false}
                  className="c9"
                  disabled={false}
                  id="bo"
                  onBlur={undefined}
                  onChange={[Function]}
                  type="checkbox"
                />
                <label
                  className="c10"
                  htmlFor="bo"
                />
              </div>
            </li>
          </div>
        </th>
        <th
          className="c11"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Name 
          </span>
        </th>
        <th
          className="c12"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Status 
          </span>
          <svg
            className="c13"
            height="6"
            innerRef={undefined}
            marginBottom="0.125rem"
            marginLeft="0.5625rem"
            style={
              Object {
                "transform": "rotate(0deg)",
              }
            }
            viewBox="0 0 9 6"
            width="9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 1.386L7.648 0 4.5 3.228 1.352 0 0 1.386 4.5 6z"
              fill="rgba(73, 73, 73, 1)"
              fillRule="evenodd"
            />
          </svg>
        </th>
        <th
          className="c14"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Created 
          </span>
        </th>
        <th
          className="c15"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Short ID 
          </span>
        </th>
        <th
          className="c16 c17"
          disabled={undefined}
          name="th"
          selected={undefined}
        />
      </tr>
    </thead>
    <tbody
      className="c18"
      disabled={undefined}
      name="tbody"
      selected={undefined}
    />
  </table>
</form>
`;

exports[`renders <InstanceList submitting /> without throwing 1`] = `
.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c3 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c5 {
  padding-top: 0.25rem;
}

.c16 {
  padding: 0rem;
}

.c12 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c18 {
  width: 100%;
}

.c18 tr:first-child td {
  border-top: none;
}

.c4 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 2rem;
  display: table-cell;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c4:not(:first-child) {
  border-left-width: 0;
}

.c4:not(:last-child) {
  border-right-width: 0;
}

.c11 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  color: rgba(73,73,73,1);
  font-weight: bold;
}

.c11:not(:first-child) {
  border-left-width: 0;
}

.c11:not(:last-child) {
  border-right-width: 0;
}

.c13 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 9.375rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c13:not(:first-child) {
  border-left-width: 0;
}

.c13:not(:last-child) {
  border-right-width: 0;
}

.c14 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c14:not(:first-child) {
  border-left-width: 0;
}

.c14:not(:last-child) {
  border-right-width: 0;
}

.c15 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c15:not(:first-child) {
  border-left-width: 0;
}

.c15:not(:last-child) {
  border-right-width: 0;
}

.c17 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 3.75rem;
  display: table-cell;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c17:not(:first-child) {
  border-left-width: 0;
}

.c17:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c14 {
    width: 10rem;
    display: table-cell;
  }
}

@media only screen and (min-width:47.9375rem) {
  .c15 {
    width: 8.125rem;
    display: table-cell;
  }
}

<form>
  <table
    className="c0"
  >
    <thead
      className="c1"
      disabled={undefined}
      name="thdead"
      selected={undefined}
    >
      <tr
        className="c2"
        disabled={undefined}
        name="tr"
        selected={undefined}
      >
        <th
          className="c3 c4"
          disabled={undefined}
          name="th"
          selected={undefined}
        >
          <div
            className="c5 baseline-jVaZNU c5 c6"
            role="group"
            style={undefined}
          >
            <li
              className="c7"
            >
              <div
                checked={false}
                className="c8"
                disabled={true}
                id="bq"
                onBlur={undefined}
                onChange={[Function]}
                type="checkbox"
              >
                <input
                  checked={false}
                  className="c9"
                  disabled={true}
                  id="br"
                  onBlur={undefined}
                  onChange={[Function]}
                  type="checkbox"
                />
                <label
                  className="c10"
                  htmlFor="br"
                />
              </div>
            </li>
          </div>
        </th>
        <th
          className="c11"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Name 
          </span>
          <svg
            className="c12"
            height="6"
            innerRef={undefined}
            marginBottom="0.125rem"
            marginLeft="0.5625rem"
            style={
              Object {
                "transform": "rotate(180deg)",
              }
            }
            viewBox="0 0 9 6"
            width="9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 1.386L7.648 0 4.5 3.228 1.352 0 0 1.386 4.5 6z"
              fill="rgba(73, 73, 73, 1)"
              fillRule="evenodd"
            />
          </svg>
        </th>
        <th
          className="c13"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Status 
          </span>
        </th>
        <th
          className="c14"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Created 
          </span>
        </th>
        <th
          className="c15"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Short ID 
          </span>
        </th>
        <th
          className="c16 c17"
          disabled={undefined}
          name="th"
          selected={undefined}
        />
      </tr>
    </thead>
    <tbody
      className="c18"
      disabled={undefined}
      name="tbody"
      selected={undefined}
    />
  </table>
</form>
`;

exports[`renders <InstanceList>{children}</InstanceList> without throwing 1`] = `
.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c3 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c5 {
  padding-top: 0.25rem;
}

.c16 {
  padding: 0rem;
}

.c12 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c18 {
  width: 100%;
}

.c18 tr:first-child td {
  border-top: none;
}

.c4 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 2rem;
  display: table-cell;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c4:not(:first-child) {
  border-left-width: 0;
}

.c4:not(:last-child) {
  border-right-width: 0;
}

.c11 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  color: rgba(73,73,73,1);
  font-weight: bold;
}

.c11:not(:first-child) {
  border-left-width: 0;
}

.c11:not(:last-child) {
  border-right-width: 0;
}

.c13 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 9.375rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c13:not(:first-child) {
  border-left-width: 0;
}

.c13:not(:last-child) {
  border-right-width: 0;
}

.c14 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c14:not(:first-child) {
  border-left-width: 0;
}

.c14:not(:last-child) {
  border-right-width: 0;
}

.c15 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c15:not(:first-child) {
  border-left-width: 0;
}

.c15:not(:last-child) {
  border-right-width: 0;
}

.c17 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 3.75rem;
  display: table-cell;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
}

.c17:not(:first-child) {
  border-left-width: 0;
}

.c17:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c14 {
    width: 10rem;
    display: table-cell;
  }
}

@media only screen and (min-width:47.9375rem) {
  .c15 {
    width: 8.125rem;
    display: table-cell;
  }
}

<form>
  <table
    className="c0"
  >
    <thead
      className="c1"
      disabled={undefined}
      name="thdead"
      selected={undefined}
    >
      <tr
        className="c2"
        disabled={undefined}
        name="tr"
        selected={undefined}
      >
        <th
          className="c3 c4"
          disabled={undefined}
          name="th"
          selected={undefined}
        >
          <div
            className="c5 baseline-jVaZNU c5 c6"
            role="group"
            style={undefined}
          >
            <li
              className="c7"
            >
              <div
                checked={false}
                className="c8"
                disabled={false}
                id="bw"
                onBlur={undefined}
                onChange={[Function]}
                type="checkbox"
              >
                <input
                  checked={false}
                  className="c9"
                  disabled={false}
                  id="bx"
                  onBlur={undefined}
                  onChange={[Function]}
                  type="checkbox"
                />
                <label
                  className="c10"
                  htmlFor="bx"
                />
              </div>
            </li>
          </div>
        </th>
        <th
          className="c11"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Name 
          </span>
          <svg
            className="c12"
            height="6"
            innerRef={undefined}
            marginBottom="0.125rem"
            marginLeft="0.5625rem"
            style={
              Object {
                "transform": "rotate(180deg)",
              }
            }
            viewBox="0 0 9 6"
            width="9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 1.386L7.648 0 4.5 3.228 1.352 0 0 1.386 4.5 6z"
              fill="rgba(73, 73, 73, 1)"
              fillRule="evenodd"
            />
          </svg>
        </th>
        <th
          className="c13"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Status 
          </span>
        </th>
        <th
          className="c14"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Created 
          </span>
        </th>
        <th
          className="c15"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Short ID 
          </span>
        </th>
        <th
          className="c16 c17"
          disabled={undefined}
          name="th"
          selected={undefined}
        />
      </tr>
    </thead>
    <tbody
      className="c18"
      disabled={undefined}
      name="tbody"
      selected={undefined}
    >
      <span>
        children
      </span>
    </tbody>
  </table>
</form>
`;

exports[`renders <Item /> without throwing 1`] = `
.c12 {
  background-color: transparent;
  text-decoration-skip: objects;
}

.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c11 {
  color: rgb(59,70,204);
  -webkit-text-fill-color: currentcolor;
}

.c11:hover {
  text-decoration: none;
}

.c3 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c5 {
  padding-top: 0.25rem;
}

.c13 {
  height: 0.6875rem;
  width: 0.6875rem;
  border-radius: 0.6875rem;
}

.c17 {
  padding: 0rem;
}

.c14 {
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 50%;
  background-color: rgb(0,152,88);
  display: inline-block;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c19 {
  cursor: pointer;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
}

.c1 tr:first-child td {
  border-top: none;
}

.c4 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  vertical-align: middle;
  text-align: left;
  border-bottom-width: 0;
}

.c4:not(:first-child) {
  border-left-width: 0;
}

.c4:not(:last-child) {
  border-right-width: 0;
}

.c15 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  vertical-align: middle;
  text-align: left;
  border-bottom-width: 0;
}

.c15:not(:first-child) {
  border-left-width: 0;
}

.c15:not(:last-child) {
  border-right-width: 0;
}

.c16 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  vertical-align: middle;
  text-align: left;
  border-bottom-width: 0;
}

.c16:not(:first-child) {
  border-left-width: 0;
}

.c16:not(:last-child) {
  border-right-width: 0;
}

.c18 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  border-bottom-width: 0;
  border-left-width: 0.0625rem !important;
}

.c18:not(:first-child) {
  border-left-width: 0;
}

.c18:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c15 {
    width: 10rem;
    display: table-cell;
  }
}

@media only screen and (min-width:47.9375rem) {
  .c16 {
    width: 8.125rem;
    display: table-cell;
  }
}

<table
  className="c0"
>
  <tbody
    className="c1"
    disabled={undefined}
    name="tbody"
    selected={undefined}
  >
    <tr
      className="c2"
      disabled={undefined}
      name="tr"
      selected={undefined}
    >
      <td
        className="c3 c4"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <div
          className="c5 baseline-jVaZNU c5 c6"
          name=""
          role="group"
          style={undefined}
        >
          <li
            className="c7"
          >
            <div
              checked={false}
              className="c8"
              disabled={false}
              id="Y"
              onBlur={undefined}
              type="checkbox"
            >
              <input
                checked={false}
                className="c9"
                disabled={false}
                id="Z"
                onBlur={undefined}
                type="checkbox"
              />
              <label
                className="c10"
                htmlFor="Z"
              />
            </div>
          </li>
        </div>
      </td>
      <td
        className="c4"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <a
          className="c11 c12"
          to="/instances/undefined"
        />
      </td>
      <td
        className="c4"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <span>
          <span
            className="c13 c14"
            color="green"
            height="0.6875rem"
            width="0.6875rem"
          />
           
          Running
        </span>
      </td>
      <td
        className="c15"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        almost NaN years
      </td>
      <td
        className="c16"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <code>
          
        </code>
      </td>
      <td
        className="c17 c18"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <div
          box={true}
          className="c19"
          onClick={[Function]}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          tag="div"
        >
          <svg
            className=""
            height="16"
            innerRef={undefined}
            style={
              Object {
                "transform": "rotate(0deg)",
              }
            }
            viewBox="0 0 4 16"
            width="4"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
              fill="rgba(73, 73, 73, 1)"
              fill-rule="evenodd"
            />
            <path
              d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
              fill="rgba(73, 73, 73, 1)"
              fill-rule="evenodd"
              style={
                Object {
                  "transform": "translateY(0.375rem)",
                }
              }
            />
            <path
              d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
              fill="rgba(73, 73, 73, 1)"
              fill-rule="evenodd"
              style={
                Object {
                  "transform": "translateY(0.75rem)",
                }
              }
            />
          </svg>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders <Item {...item} /> without throwing 1`] = `
.c12 {
  background-color: transparent;
  text-decoration-skip: objects;
}

.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c11 {
  color: rgb(59,70,204);
  -webkit-text-fill-color: currentcolor;
}

.c11:hover {
  text-decoration: none;
}

.c3 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c5 {
  padding-top: 0.25rem;
}

.c13 {
  height: 0.6875rem;
  width: 0.6875rem;
  border-radius: 0.6875rem;
}

.c17 {
  padding: 0rem;
}

.c14 {
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 50%;
  background-color: rgb(59,70,204);
  display: inline-block;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c19 {
  cursor: pointer;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
}

.c1 tr:first-child td {
  border-top: none;
}

.c4 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  vertical-align: middle;
  text-align: left;
  border-bottom-width: 0;
}

.c4:not(:first-child) {
  border-left-width: 0;
}

.c4:not(:last-child) {
  border-right-width: 0;
}

.c15 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  vertical-align: middle;
  text-align: left;
  border-bottom-width: 0;
}

.c15:not(:first-child) {
  border-left-width: 0;
}

.c15:not(:last-child) {
  border-right-width: 0;
}

.c16 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  vertical-align: middle;
  text-align: left;
  border-bottom-width: 0;
}

.c16:not(:first-child) {
  border-left-width: 0;
}

.c16:not(:last-child) {
  border-right-width: 0;
}

.c18 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  border-bottom-width: 0;
  border-left-width: 0.0625rem !important;
}

.c18:not(:first-child) {
  border-left-width: 0;
}

.c18:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c15 {
    width: 10rem;
    display: table-cell;
  }
}

@media only screen and (min-width:47.9375rem) {
  .c16 {
    width: 8.125rem;
    display: table-cell;
  }
}

<table
  className="c0"
>
  <tbody
    className="c1"
    disabled={undefined}
    name="tbody"
    selected={undefined}
  >
    <tr
      className="c2"
      disabled={undefined}
      name="tr"
      selected={undefined}
    >
      <td
        className="c3 c4"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <div
          className="c5 baseline-jVaZNU c5 c6"
          name="id"
          role="group"
          style={undefined}
        >
          <li
            className="c7"
          >
            <div
              checked={false}
              className="c8"
              disabled={false}
              id="be"
              onBlur={undefined}
              type="checkbox"
            >
              <input
                checked={false}
                className="c9"
                disabled={false}
                id="bf"
                onBlur={undefined}
                type="checkbox"
              />
              <label
                className="c10"
                htmlFor="bf"
              />
            </div>
          </li>
        </div>
      </td>
      <td
        className="c4"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <a
          className="c11 c12"
          to="/instances/name"
        >
          name
        </a>
      </td>
      <td
        className="c4"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <span>
          <span
            className="c13 c14"
            color="primary"
            height="0.6875rem"
            width="0.6875rem"
          />
           
          Provisioning
        </span>
      </td>
      <td
        className="c15"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        almost NaN years
      </td>
      <td
        className="c16"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <code>
          id
        </code>
      </td>
      <td
        className="c17 c18"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <div
          box={true}
          className="c19"
          onClick={[Function]}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          tag="div"
        >
          <svg
            className=""
            height="16"
            innerRef={undefined}
            style={
              Object {
                "transform": "rotate(0deg)",
              }
            }
            viewBox="0 0 4 16"
            width="4"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
              fill="rgba(73, 73, 73, 1)"
              fill-rule="evenodd"
            />
            <path
              d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
              fill="rgba(73, 73, 73, 1)"
              fill-rule="evenodd"
              style={
                Object {
                  "transform": "translateY(0.375rem)",
                }
              }
            />
            <path
              d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
              fill="rgba(73, 73, 73, 1)"
              fill-rule="evenodd"
              style={
                Object {
                  "transform": "translateY(0.75rem)",
                }
              }
            />
          </svg>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders <Item allowedActions /> without throwing 1`] = `
.c12 {
  background-color: transparent;
  text-decoration-skip: objects;
}

.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c11 {
  color: rgb(59,70,204);
  -webkit-text-fill-color: currentcolor;
}

.c11:hover {
  text-decoration: none;
}

.c3 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c5 {
  padding-top: 0.25rem;
}

.c13 {
  height: 0.6875rem;
  width: 0.6875rem;
  border-radius: 0.6875rem;
}

.c17 {
  padding: 0rem;
}

.c14 {
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 50%;
  background-color: rgb(0,152,88);
  display: inline-block;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c19 {
  cursor: pointer;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
}

.c1 tr:first-child td {
  border-top: none;
}

.c4 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  vertical-align: middle;
  text-align: left;
  border-bottom-width: 0;
}

.c4:not(:first-child) {
  border-left-width: 0;
}

.c4:not(:last-child) {
  border-right-width: 0;
}

.c15 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  vertical-align: middle;
  text-align: left;
  border-bottom-width: 0;
}

.c15:not(:first-child) {
  border-left-width: 0;
}

.c15:not(:last-child) {
  border-right-width: 0;
}

.c16 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  vertical-align: middle;
  text-align: left;
  border-bottom-width: 0;
}

.c16:not(:first-child) {
  border-left-width: 0;
}

.c16:not(:last-child) {
  border-right-width: 0;
}

.c18 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  border-bottom-width: 0;
  border-left-width: 0.0625rem !important;
}

.c18:not(:first-child) {
  border-left-width: 0;
}

.c18:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c15 {
    width: 10rem;
    display: table-cell;
  }
}

@media only screen and (min-width:47.9375rem) {
  .c16 {
    width: 8.125rem;
    display: table-cell;
  }
}

<table
  className="c0"
>
  <tbody
    className="c1"
    disabled={undefined}
    name="tbody"
    selected={undefined}
  >
    <tr
      className="c2"
      disabled={undefined}
      name="tr"
      selected={undefined}
    >
      <td
        className="c3 c4"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <div
          className="c5 baseline-jVaZNU c5 c6"
          name=""
          role="group"
          style={undefined}
        >
          <li
            className="c7"
          >
            <div
              checked={false}
              className="c8"
              disabled={false}
              id="bc"
              onBlur={undefined}
              type="checkbox"
            >
              <input
                checked={false}
                className="c9"
                disabled={false}
                id="bd"
                onBlur={undefined}
                type="checkbox"
              />
              <label
                className="c10"
                htmlFor="bd"
              />
            </div>
          </li>
        </div>
      </td>
      <td
        className="c4"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <a
          className="c11 c12"
          to="/instances/undefined"
        />
      </td>
      <td
        className="c4"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <span>
          <span
            className="c13 c14"
            color="green"
            height="0.6875rem"
            width="0.6875rem"
          />
           
          Running
        </span>
      </td>
      <td
        className="c15"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        almost NaN years
      </td>
      <td
        className="c16"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <code>
          
        </code>
      </td>
      <td
        className="c17 c18"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <div
          box={true}
          className="c19"
          onClick={[Function]}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          tag="div"
        >
          <svg
            className=""
            height="16"
            innerRef={undefined}
            style={
              Object {
                "transform": "rotate(0deg)",
              }
            }
            viewBox="0 0 4 16"
            width="4"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
              fill="rgba(73, 73, 73, 1)"
              fill-rule="evenodd"
            />
            <path
              d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
              fill="rgba(73, 73, 73, 1)"
              fill-rule="evenodd"
              style={
                Object {
                  "transform": "translateY(0.375rem)",
                }
              }
            />
            <path
              d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
              fill="rgba(73, 73, 73, 1)"
              fill-rule="evenodd"
              style={
                Object {
                  "transform": "translateY(0.75rem)",
                }
              }
            />
          </svg>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders <Item mutating /> without throwing 1`] = `
.c12 {
  background-color: transparent;
  text-decoration-skip: objects;
}

.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c11 {
  color: rgb(59,70,204);
  -webkit-text-fill-color: currentcolor;
}

.c11:hover {
  text-decoration: none;
}

.c3 {
  padding: 0rem;
  padding-left: 0.75rem;
}

.c5 {
  padding-top: 0.25rem;
}

.c19 {
  padding: 0rem;
}

.c14 {
  fill: rgb(59,70,204);
  stroke: rgb(59,70,204);
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
}

.c15 {
  fill: rgb(59,70,204);
  stroke: rgb(59,70,204);
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

.c16 {
  fill: rgb(59,70,204);
  stroke: rgb(59,70,204);
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
  -webkit-animation-delay: 1s;
  animation-delay: 1s;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 1.25rem;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
}

.c1 tr:first-child td {
  border-top: none;
}

.c4 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  vertical-align: middle;
  text-align: left;
  border-bottom-width: 0;
}

.c4:not(:first-child) {
  border-left-width: 0;
}

.c4:not(:last-child) {
  border-right-width: 0;
}

.c17 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  vertical-align: middle;
  text-align: left;
  border-bottom-width: 0;
}

.c17:not(:first-child) {
  border-left-width: 0;
}

.c17:not(:last-child) {
  border-right-width: 0;
}

.c18 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 0rem;
  display: none;
  vertical-align: middle;
  text-align: left;
  border-bottom-width: 0;
}

.c18:not(:first-child) {
  border-left-width: 0;
}

.c18:not(:last-child) {
  border-right-width: 0;
}

.c20 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  vertical-align: middle;
  text-align: center;
  border-bottom-width: 0;
  border-left-width: 0.0625rem !important;
}

.c20:not(:first-child) {
  border-left-width: 0;
}

.c20:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

@media only screen and (min-width:47.9375rem) {
  .c17 {
    width: 10rem;
    display: table-cell;
  }
}

@media only screen and (min-width:47.9375rem) {
  .c18 {
    width: 8.125rem;
    display: table-cell;
  }
}

<table
  className="c0"
>
  <tbody
    className="c1"
    disabled={undefined}
    name="tbody"
    selected={undefined}
  >
    <tr
      className="c2"
      disabled={undefined}
      name="tr"
      selected={undefined}
    >
      <td
        className="c3 c4"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <div
          className="c5 baseline-jVaZNU c5 c6"
          name=""
          role="group"
          style={undefined}
        >
          <li
            className="c7"
          >
            <div
              checked={false}
              className="c8"
              disabled={false}
              id="a"
              onBlur={undefined}
              type="checkbox"
            >
              <input
                checked={false}
                className="c9"
                disabled={false}
                id="bb"
                onBlur={undefined}
                type="checkbox"
              />
              <label
                className="c10"
                htmlFor="bb"
              />
            </div>
          </li>
        </div>
      </td>
      <td
        className="c4"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <a
          className="c11 c12"
          to="/instances/undefined"
        />
      </td>
      <td
        className="c4"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <div
          className="c13"
        >
          <svg
            height="10"
            width="28"
          >
            <rect
              className="c14"
              height="6"
              width="6"
              x="2"
              y="2"
            />
            <rect
              className="c15"
              height="6"
              width="6"
              x="11"
              y="2"
            />
            <rect
              className="c16"
              height="6"
              width="6"
              x="20"
              y="2"
            />
          </svg>
        </div>
      </td>
      <td
        className="c17"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        almost NaN years
      </td>
      <td
        className="c18"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <code>
          
        </code>
      </td>
      <td
        className="c19 c20"
        disabled={undefined}
        name="td"
        selected={undefined}
      >
        <svg
          className=""
          height="16"
          innerRef={undefined}
          style={
            Object {
              "transform": "rotate(0deg)",
            }
          }
          viewBox="0 0 4 16"
          width="4"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
            fill="rgb(216, 216, 216)"
            fill-rule="evenodd"
          />
          <path
            d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
            fill="rgb(216, 216, 216)"
            fill-rule="evenodd"
            style={
              Object {
                "transform": "translateY(0.375rem)",
              }
            }
          />
          <path
            d="M2 4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
            fill="rgb(216, 216, 216)"
            fill-rule="evenodd"
            style={
              Object {
                "transform": "translateY(0.75rem)",
              }
            }
          />
        </svg>
      </td>
    </tr>
  </tbody>
</table>
`;
